--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@
             document.getElementById('join-screen').classList.remove('hidden');
         };
 
+        // GLOBAL HELPER (Moved here so Bird class can see it)
+        function sendToMobile(conn, status, btnText) {
+            if(conn && conn.open) conn.send({ type: 'STATUS', status: status, btn: btnText });
+        }
+
         const COLORS = ['#e74c3c', '#3498db', '#2ecc71', '#f1c40f', '#9b59b6', '#e67e22'];
 
         function generateShortID() {
@@ -358,10 +363,6 @@
             }
 
             // --- GAME LOGIC ---
-
-            function sendToMobile(conn, status, btnText) {
-                if(conn && conn.open) conn.send({ type: 'STATUS', status: status, btn: btnText });
-            }
 
             function addPlayer(type, key, connection) {
                 if (type === 'keyboard' && birds.find(b => b.controlType === 'keyboard' && b.controlKey === key)) return;
